--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astro Motion by TemplateMo</title>
+    <title>The Moon</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
@@ -18,9 +18,6 @@ https://templatemo.com/tm-560-astro-motion
 -->
 </head>
 <body>
-    <video autoplay muted loop id="bg-video">
-        <source src="video/gfp-astro-timelapse.mp4" type="video/mp4">
-    </video>
     <div class="page-container">
       <div class="container-fluid">
         <div class="row">
