--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="2">Gallery</a>
+                        <a class="nav-link" href="#0" data-no="2">Gallery AY YO</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
