--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
 <title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
-<link rel="canonical" href="https://example.com/">
+<meta http-equiv="refresh" content="0; URL=https://Zer0'sChallengeToCandl3.com/">
+<link rel="canonical" href="http://129.158.230.21/">
