--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <meta charset="utf-8">
-<title>Redirecting to https://Zer0'sChallengeToCandl3.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://Zer0'sChallengeToCandl3.com/">
+<title>Redirecting to https://Zer0'sChallengeToCandl3.io/</title>
+<meta http-equiv="refresh" content="0; URL=https://Zer0'sChallengeToCandl3.io/">
 <link rel="canonical" href="http://129.158.230.21/">
